--- a/css/main.css
+++ b/css/main.css
@@ -190,10 +190,44 @@ footer span {
 
 /*Tablet Media Query*/
 @media all and (min-width:768px){
-/*    Tablet styles here*/
+    .bottom-section {
+       justify-content: space-between;
+       align-items: flex-start;
+       border-top: 3px solid #eee;
+    }
+    
+    .section-one, .section-two, .section-three{
+        border-top: none;
+        flex-basis: 30%;
+    }
+    
+    .section-two {
+        border-right: 3px solid #eee;
+        border-left: 3px solid #eee;
+        padding: 0 20px;
+    }
 }
 
 /*Destop media query*/
 @media all and (min-width: 1200px){
-/*    Desktop styles here*/
+    
+    header {
+        justify-content: space-between;
+    }
+    
+    header h1 {
+        justify-content: flex-start;
+        width: 30%;
+        padding: 0;
+        border-bottom: none;
+    }
+    
+    header nav {
+        width: 40%;
+    }
+    
+    header nav ul{
+        display: flex;
+        justify-content: space-between;
+    }
 }
